--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.joblib filter=lfs diff=lfs merge=lfs -text
 final_project(5).csv filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
